[package]
name = "nudge"
version = "0.1.0"
edition = "2025"
authors = ["ZeroDread"]
description = "Blazing Fast Interactive System Update Manager"
license = "MIT"
repository = "https://github.com/ZeroDread/Nudge"
keywords = ["cli", "update", "system", "interactive", "terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "nudge"
path = "src/main.rs"

[dependencies]
crossterm = "0.27"
ratatui = "0.25"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
colored = "2.1"
dialoguer = "0.11"

# Performance optimizations
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Abort on panic (smaller binary)
strip = true        # Strip symbols from binary

[profile.dev]
opt-level = 1       # Some optimization in dev builds for speed
